content views - ui - composite definitions - help user resolve content conflicts
When a composite definition is created, the user is not
allowed to select component views where the same repo
may exist multiple times in the definition.  This also applies
when editing.

The issue that arises is that after the definition is
created, there is nothing to stop a user from going in to
change one of the components (e.g. add a repo) which causes
a conflict (i.e. definition now has component views w/ overlapping
repos).

In order to address this, this commit will disable the 'save'
button on the Content screen for the composite definition, highlight
in red the views that have a conflict and provide a tipsy informing
them to unselect views to resolve the conflict. Once the conflicts
are addressed, the user may then save the updated definition,
publish views, refresh views...etc.

--- a/app/stylesheets/sections/contents.scss
+++ b/app/stylesheets/sections/contents.scss
@@ -559,3 +559,12 @@ $container_width: ($static_width/2) - 36;
     list-style: circle;
   }
 }
+
+#view_definitions {
+  tr.error {
+    @include background-image(linear-gradient(white, white, rgb(255,150,150)));
+    &:hover {
+      @include background-image(linear-gradient(white, rgb(255,150,150)));
+    }
+  }
+}
